# fwbackups

./: .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  INSTALL  INSTALL.md  Makefile.am  NEWS  README  README.md  TODO  TODO.md  autogen.sh  com.diffingo.fwbackups.json  configure.ac  docker-compose.test.yml  edit_dpkg_status  fwbackups.pc.in  fwbackups.spec.in  install_ubuntu_focal.sh  meson.build  meson_options.txt  pyproject.toml  test.operations.py  uninstall_ubuntu_focal.sh
.github/: issue_template.md
data/: MacOSXBundleInfo.plist.in  com.diffingo.fwbackups.appdata.xml.in  com.diffingo.fwbackups.desktop.in  com.diffingo.fwbackups.metainfo.xml.in  fwbackups.icns  fwbackups.qrc  fwbackups_nsis.xcf  meson.build
data/icons/: meson.build
data/ui/: choosePrograms.ui  configBackup.ui  exportSets.ui  fwbackups.ui  manageKeys.ui  prefs.ui  restore.ui
data/ui/client/: choosePrograms.ui  choose_programs.ui  configBackup.ui  configure_backup.ui  export_sets.ui  fwbackups.ui  manageKeys.ui  prefs.ui  restore.ui  server_connections.ui
data/ui/server/: configure_server.ui  manage_account.ui  serveradmin.ui
data/ui/server_admin/: configure_server.ui  manage_account.ui  server_admin.ui
docker/: Dockerfile.ssh-test  run-ssh-operations-test.sh
docs/: README
docs/User_Guide/: build.sh  publican.cfg  update_translations.sh
docs/User_Guide/en-US/: About_fwbackups.xml  Author_Group.xml  Book_Info.xml  Feedback.xml  Getting_Started.xml  Preface.xml  Revision_History.xml  Technical_information.xml  User_Guide.ent  User_Guide.xml  Using_fwbackups.xml
docs/User_Guide/pot/: About_fwbackups.pot  Author_Group.pot  Book_Info.pot  Feedback.pot  Getting_Started.pot  Preface.pot  Revision_History.pot  Technical_information.pot  User_Guide.pot  Using_fwbackups.pot
docs/html/: appe-User_Guide-Revision_History.html  chap-User_Guide-About_fwbackups.html  chap-User_Guide-Getting_Started.html  chap-User_Guide-Using_fwbackups.html  index-single.html  index.html  pref-User_Guide-Preface.html  sect-User_Guide-About_fwbackups-Reporting_a_problem.html  sect-User_Guide-Creating_a_backup_set-Destination.html  sect-User_Guide-Creating_a_backup_set-Options_Advanced.html  sect-User_Guide-Creating_a_backup_set-Options_Simple.html  sect-User_Guide-Creating_a_backup_set-Times.html  sect-User_Guide-Getting_Started-Starting_fwbackups.html  sect-User_Guide-Using_fwbackups-Changing_your_preferences.html  sect-User_Guide-Using_fwbackups-Creating_a_backup_set.html  sect-User_Guide-Using_fwbackups-Editing_an_existing_set.html  sect-User_Guide-Using_fwbackups-Importing_or_exporting_sets.html  sect-User_Guide-Using_fwbackups-Restoring_backups.html  sect-User_Guide-Using_fwbackups-Running_a_backup_only_once.html
docs/html/Common_Content/css/: common.css  overrides.css
docs/publican-diffingo/: COPYING  README  defaults.cfg  overrides.cfg  publican-diffingo.spec  publican.cfg
docs/publican-diffingo/en-US/: Feedback.xml  Legal_Notice.xml
fwbackups/: __init__.py  __init__.py.in  __main__.py  config.py  const.py  cron.py  fwlogger.py  i18n.py  meson.build  sftp.py  shutil_modded.py  widgets.py
fwbackups/engines/: __init__.py  rsync.py  tar.py
fwbackups/operations/: __init__.py  backup.py  restore.py
fwbackups/ui/: __init__.py  loader.py
fwbackups/ui/gtk/: BugReport.ui  about.ui  backupset.ui  confirm_dia.ui  error_dia.ui  export_dia.ui  fwbackups.cmb  fwbackups.ui  info_dia.ui  main.ui  menus.ui  path_dia.ui  preferences.ui  restore.ui  save_dia.ui  style.css  template.ui  warning_dia.ui
gui/: CMakeLists.txt  custom_widgets.cpp  custom_widgets.h
gui/client/: CMakeLists.txt  configure_backup.cpp  configure_backup.h  fwbackups.cpp  fwbackups.h  main.cpp  restore.cpp  restore.h
gui/server_admin/: CMakeLists.txt  configure_server.cpp  configure_server.h  main.cpp  manage_account.cpp  manage_account.h  server_admin.cpp  server_admin.h
help/: ChangeLog  Makefile.am  fwbackups.omf.in
help/C/: fdl.xml  fwbackups.xml  gpl.xml
lib/: CMakeLists.txt  common.cpp  common.h.in  config.cpp  config.h  initialization.cpp  initialization.h  logger.cpp  logger.h
nsis/: README  copying-crypto.rtf  copying-lite.rtf  copying.rtf  english.nsh  fwbackups-crypto.nsi  fwbackups-lite.nsi  fwbackups.nsi
pixmaps/: Makefile.am
po/: CMakeLists.txt  LINGUAS  Makefile.in.in  POTFILES  POTFILES.in  az.po  bg.po  ca.po  cs.po  da.po  de.po  es.po  et.po  fr.po  fwbackups.pot  gl.po  hr.po  id.po  is.po  it.po  lt.po  meson.build  ms.po  nb_NO.po  nl.po  oc.po  pl.po  pt_BR.po  pt_PT.po  ru.po  sk.po  sq.po  sv.po  th.po  tr.po  uk.po  update-potfiles.sh
src/: BugReport.glade  BugReport.ui  CMakeLists.txt  Makefile.am  common.cpp  common.h  common.h.in  config.cpp  config.h  cronwriter.py  fwbackups-autostart.desktop  fwbackups-runapp.py  fwbackups-runapp.pyw  fwbackups.desktop  fwbackups.glade  fwbackups.ui  initialization.cpp  initialization.h  logger.cpp  logger.h  main.cpp
src/backends/: copy.cpp  copy.h
src/fwbackups/: Makefile.am  __init__.py.in  config.py  const.py  const.py.in  cron.py  fwlogger.py  i18n.py  interface.py  sftp.py  shutil_modded.py  subprocess_killable.py  widgets.py  winprocess.py
src/fwbackups/engines/: __init__.py  rsync.py  tar.py
src/fwbackups/operations/: Makefile.am  __init__.py  backup.py  restore.py
src/interface/qt4/: configBackup.cpp  configBackup.h  custom_widgets.cpp  custom_widgets.h  fwbackups.cpp  fwbackups.h  restore.cpp  restore.h  tabntabbarwidget.cpp  tabntabbarwidget.h
test/: test.operations.py
test/configs/: 1.43.0.conf  1.43.0beta1.conf  1.43.0beta2.conf  1.43.0beta3.conf  1.43.0rc1.conf  1.43.0rc2.conf  1.43.0rc3.conf  1.43.1.conf  1.43.2.conf  1.43.2beta1.conf  1.43.2beta3.conf  1.43.2rc1.conf  1.43.2rc2.conf  1.43.2rc3.conf  1.43.3rc1.conf  1.43.3rc2.conf
