[tool.poetry]
name = "fwbackups"
version = "1.43.8"
description = "A feature-rich, user-friendly backup program"
authors = ["Stewart Adam <s.adam@diffingo.com>"]
license = "GPLv2"
readme = "README.md"

homepage = "https://diffingo.com/oss/fwbackups"
repository = "https://github.com/stewartadma/fwbackups"
documentation = "https://downloads.diffingo.com/fwbackups/docs/html/"

keywords = ["gtk+", "backups"]

[tool.poetry.dependencies]
python = "^3.10"
paramiko = "^3.4.0"
PyGObject = "^3.42.2"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
# Python version will need to be manually updated new releases because
# pyinstaller uses upper version constraints:
# - https://github.com/python-poetry/poetry/issues/1413
# - https://github.com/pyinstaller/pyinstaller/pull/6322
pyinstaller = { version = ">=5.13.1", python = "<3.13" }
pyinstaller-versionfile = ">=2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
