[project]
name = "fwbackups"
version = "1.43.8"
description = "A feature-rich, user-friendly backup program"
authors = [{ name = "Stewart Adam", email = "s.adam@diffingo.com" }]
requires-python = "~=3.13"
readme = "README.md"
license = "GPL-2.0-or-later"
license-files = ["COPYING"]
keywords = [
    "gtk+",
    "backups",
]
dependencies = [
    "paramiko>=3.5.1,<4",
    "PyGObject>=3.42.2,<4",
]

[project.urls]
Homepage = "https://diffingo.com/oss/fwbackups"
Repository = "https://github.com/stewartadma/fwbackups"
Documentation = "https://downloads.diffingo.com/fwbackups/docs/html/"

[dependency-groups]
dev = [
    "pyinstaller>=6.12.0",
    "pyinstaller-versionfile>=2.1.1",
    "ruff>=0.9.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
